welcome.lessons.welcome.variables.Variables.scala.error
Variables:16: error: not found: value nbpas
while (zero!=nbpas)
             ^