welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:Int =0
while(estSurBiscuit)
{
	avance();
	nbPas=nbPas + 1
	
}
if (estSurBiscuit)
{
	prendBiscuit();

}

var zero:Int =0
while (zero!=nbpas)
{
	recule();
	nbPas = nbPas + 1
}
poseBiscuit();